# Utilities

./: LICENSE  README.md  aliases.py  async.py  compose.py  database.py  display.py  event.py  factory.py  files.py  formula.py  log.py  pyproject.toml  setup.cfg  types.py  utils.py
docs/en-UK/: README.md
docs/en-UK/files/: README.md
docs/en-UK/funcs/: README.md
docs/en-UK/globals/: README.md
docs/en-UK/globals/aliases/: README.md
docs/en-UK/globals/log/: README.md
docs/en-UK/patterns/: README.md
docs/en-UK/patterns/event/: README.md
docs/en-UK/patterns/factory/: README.md
pkutils/funcs/: asynchronous.py
pkutils/patterns/: __init__.py
src/pkutils/: __init__.py  log.py
src/pkutils/files/: __init__.py
src/pkutils/funcs/: asynchronous.py  compose.py
src/pkutils/globals/: __init__.py
src/pkutils/patterns/event/: __init__.py  event.py
src/pkutils/patterns/factory/: __init__.py
src/polutils/: __init__.py  log.py
src/polutils/files/: __init__.py  file.py
src/polutils/funcs/: __init__.py  asynchronous.py  compose.py
src/polutils/patterns/: __init__.py
src/polutils/patterns/event/: __init__.py
src/polutils/patterns/factory/: __init__.py
src/utils/: __init__.py
src/utils/files/: __init__.py  file.py  preprocess.py
src/utils/funcs/: __init__.py  asynchronous.py  compose.py
src/utils/patterns/: __init__.py
utils/: aliases.py
utils/funcs/: __init__.py  asynchronous.py  compose.py
