[metadata]
name = pkutils
description = python utilities
author = Gavriil Polshkrev
license = MIT
license_file = LICENSE

[options]
packages =
    pkutils
    pkutils.files
    pkutils.funcs
    pkutils.patterns
    pkutils.patterns.event
    pkutils.patterns.factory
python_requires = >=3.10
package_dir =
    =src
zip_safe = no