[metadata]
name = polutils
description = python utilities
author = Gavriil Polshkrev
license = MIT
license_file = LICENSE

[options]
packages =
    polutils
    polutils.files
    polutils.funcs
    polutils.patterns
    polutils.patterns.factory
    polutils.patterns.event
python_requires = >=3.10
package_dir =
    =src
zip_safe = no